# aurafx

./: .env.example  .gitignore  Dockerfile.frontend.bak  README.md  compose.yaml  docker-compose.yml  implementation_plan.md
backend/: .dockerignore  Dockerfile  Dockerfile.dev  package.json  pyproject.toml  tsconfig.json
backend/app/: config.py  db.py  deps.py  main.py
backend/app/api/routes/: __init__.py  trading.py
backend/app/core/: blackout.py  candles.py  indicators.py  signals.py  stream.py
backend/app/models/: __init__.py  signal.py
backend/app/schemas/: trading.py
backend/app/services/: broadcast.py  config_store.py  gmo_client.py  live_trading.py  order_dispatcher.py  positions.py  rate_limiter.py  signals_repository.py
backend/runtime/: trading_config.json
backend/src/: index.ts
backend/tests/unit/: test_candles.py  test_indicators.py  test_positions.py
docs/: fx_signal_system.md
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
frontend/src/: App.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CandleTable.tsx  IndicatorPanel.tsx  PerformancePanel.tsx  PerformanceView.tsx  PositionPanel.tsx  (+8 more)
(+21 files in other folders)
