[project]
name = "aurafx-backend"
version = "0.1.0"
description = "FX real-time monitor and signal backend"
authors = [{ name = "aurafx" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.3",
    "pydantic-settings==2.3.4",
    "websockets==12.0",
    "httpx==0.27.0",
    "pandas==2.2.3",
    "pandas-ta==0.3.14b0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "redis==5.0.8",
    "python-json-logger==3.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "coverage[toml]==7.6.1",
    "ruff==0.6.1",
    "mypy==1.11.2",
    "types-pyyaml==6.0.12.20240808"
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.mypy]
python_version = "3.12"
strict = false
plugins = []

